phpAdsNew - ChangeLog


CVS			+ Misc changes
			  - 2003-01-12:  Added info about the current version on the Available Updates page  (Niels)
			  - 2003-01-12:  Added flag for Cape Verde  (Niels)
			

v 2.0rc2		+ Misc bugfixes
			  - 2003-01-07:  Wrong value was used to identify PHP < 4.0.3 during the install and upgrade process  (Niels)
			  - 2003-01-08:  After the upgrade all config.inc.php boolean variables were wrongly set to true  (Matteo)
			  - 2003-01-08:  Adding a client id during direct selection caused an invalid SQL query -> no banners were shown  (Niels)


v 2.0rc1		+ Added the ability to serve and manage text ads  (Niels, 2002-07-29)
			+ Added the ability to preview banners on the Linked Banners page  (Niels, 2002-08-01)
			+ Added the ability to show which banners match when using campaigns to link zones to banners  (Niels, 2002-08-01)
			+ Added the ability to show the parent campaigns when using banners to link zones to banners  (Niels, 2002-08-01)
			+ Added the ability to auto clean old statistics and userlog entries  (Matteo, 2002-08-02)
			+ Made phpAdsNew compatible with register_globals = off and/or gpc_magic_quotes = off  (Niels, 2002-08-05)
			+ The language and browser delivery limitations now have presets, which can be easily selected  (Niels, 2002-08-08)
			+ Added Geotargeting based on the IP2Country database. To enable this feature you need to buy the database
			  from IP2Country. Also added two delivery limitations called 'Country' and 'Continent' to enable the Geotracking  (Niels, 2002-08-18)
			+ The source parameter can now be overwritten in Flash banners with multiple links in order to be able to log each destination url as a seperate entity (Niels, 2002-10-14)
			+ Added the ability to log the geotargeting data in the statistics if 'verbose stats' are used  (Niels, 2002-10-17)
			+ Added keyboard shortcuts for some functions and navigation and changed the tab order for most pages  (Niels, 2002-10-23)